tests/e2e/not_allowed/called.error
Error: syntax error in story at line 1, column 1

1|    called = 1
      ^^^^^^

E0030: `called` is reserved for future use
